# RuvonInference

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  cli.py  docker-compose.yml  main.py  postman_collection.json  pyproject.toml  pytest.ini
.github/workflows/: build-containers.yml  lambda-deploy.yml
commands/: __init__.py  benchmarking.py  common.py  generate.py  monitoring.py  testing.py
docs/: day1-article.md  day2-article.md  glossary.md  intermission-deployment.md  introduction.md  part1-article.md  part2-article.md  part3-advanced-attention.md  part3-article.md  part4-article.md  part5-advanced-entropy.md  part5-article.md  part6-article.md  part7-article.md  part8-article.md  part9-article.md
infra/: main.tf  user_data.sh  user_data_cpu.sh  user_data_gpu.sh  variable.tf
ruvoninference/api/: __init__.py  batched_queue.py  continuous_queue.py  server.py
ruvoninference/attention/: __init__.py  benchmarks.py
ruvoninference/generation/: __init__.py  batch_generator.py
ruvoninference/lambda/: lambda_function.py  requirements.txt
ruvoninference/model/: gpt2.py
ruvoninference/sampling/: __init__.py  strategies.py
ruvonvllm/api/: __init__.py  batched_queue.py  continuous_queue.py  sequential_queue.py  server.py
ruvonvllm/attention/: __init__.py  implementations.py
ruvonvllm/generation/: __init__.py  batch_generator.py
ruvonvllm/model/: gpt2.py
ruvonvllm/sampling/: __init__.py
terraform/lambda/: main.tf  (+1 more)
tests/: test_batch_generation_integration.py  test_continuous_step_generation.py  test_server.py
(+15 files in other folders)
