[project]
name = "ruvonvllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.3.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0,<2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "aiohttp>=3.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
