[project]
name = "ruvoninference"
version = "0.1.0"
description = "Educational inference engine built from scratch for learning LLM serving techniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # RUNTIME (Lambda) deps only:
    "fastapi>=0.118.0",
    "mangum>=0.17.0",         # add this to adapt ASGI to Lambda
    "transformers>=4.35.0",
    "numpy>=1.24.0,<2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "uvicorn>=0.37.0",
    "httptools>=0.6.4",
    "websockets>=15.0.1",
    "uvloop>=0.21.0"
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "uvloop>=0.21.0"
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
]

flash = [
    "flash-attn>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ruvoninference*"]
